--- a/Frontend-KSSMS/sweet-angular-app/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend-KSSMS/sweet-angular-app/src/app/components/dashboard/dashboard.component.html
@@ -71,14 +71,15 @@
                     <label>Category:</label>
                     <select [(ngModel)]="newSweet.category" name="category" required>
                         <option value="">Select Category</option>
-                        <option value="MILK_BASED">Milk-based</option>
-                        <option value="NUT_BASED">Nut-based</option>
-                        <option value="CHOCOLATE">Chocolate</option>
-                        <option value="CANDY">Candy</option>
-                        <option value="CAKE">Cake</option>
-                        <option value="DRY_FRUIT">Dry fruit</option>
-                        <option value="FRUIT_BASED">Fruit-based</option>
-                        <option value="SUGAR_FREE">Sugar-free</option>
+                        <option value="Milk-Based">Milk-based</option>
+                        <option value="Nut-based">Nut-based</option>
+                        <option value="Chocolate">Chocolate</option>
+                        <option value="Candy">Candy</option>
+                        <option value="Cake">Cake</option>
+                        <option value="Pastry">Pastry</option>
+                        <option value="Dry Fruit">Dry fruit</option>
+                        <option value="Fruit-based">Fruit-based</option>
+                        <!-- <option value="SUGAR_FREE">Sugar-free</option> -->
 
                     </select>
                 </div>
