catory entity fixed

--- a/Frontend-KSSMS/sweet-angular-app/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend-KSSMS/sweet-angular-app/src/app/components/dashboard/dashboard.component.html
@@ -71,16 +71,15 @@
                     <label>Category:</label>
                     <select [(ngModel)]="newSweet.category" name="category" required>
                         <option value="">Select Category</option>
-                        <option value="Milk-Based">Milk-based</option>
+                        <option value="Milk-based">Milk-based</option>
                         <option value="Nut-based">Nut-based</option>
                         <option value="Chocolate">Chocolate</option>
                         <option value="Candy">Candy</option>
                         <option value="Cake">Cake</option>
                         <option value="Pastry">Pastry</option>
-                        <option value="Dry Fruit">Dry fruit</option>
+                        <option value="Dry Fruit">Dry Fruit</option>
                         <option value="Fruit-based">Fruit-based</option>
-                        <!-- <option value="SUGAR_FREE">Sugar-free</option> -->
-
+                        <option value="Sugar-free">Sugar-free</option>
                     </select>
                 </div>
 
